--- a/main.css
+++ b/main.css
@@ -9,7 +9,8 @@ Purple: 3E41A8;
 */
 
 body {
-    width: 1000px; /* TODO: make 900 ?*/
+    width: 98%;
+    margin: 1rem;
 }
 
 nav {
@@ -17,12 +18,12 @@ nav {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 10px 20px;
+    padding: 1rem 2rem;
 }
 
 .logo {
     color: #FFFFFF;  /* white */
-    font-size: 30px;
+    font-size: 3rem;
     font-family: 'Nunito', sans-serif;
 }
 
@@ -31,7 +32,7 @@ nav {
     text-decoration: none;
     font-family: 'Poppins', sans-serif;
     font-weight: bold;
-    margin-left: 20px;
+    margin: 1rem;
 }
 
 header {
