--- a/main.css
+++ b/main.css
@@ -37,32 +37,30 @@ nav {
 
 header {
     color: #FFFFFF;  /* white */
-    padding: 40px 20px;
     background-color: #2B57A1;  /* dark blue */
-
     display: flex;
     justify-content: space-around;
     align-items: center;
 }
 
 h1 {
-    font-size: 70px;
+    font-size: 6vw;
     font-family: 'Poppins', sans-serif;
-    line-height: 80px;
-    margin: 10px;
+    line-height: 3rem;
+    margin: 3vw;
 }
 
 .dog-showcase {
-    width: 400px;
-    height: 400px;
+    width: auto;
+    height: auto;
     border-radius: 50%;
     background-color: #FFFFFF;
     border: 8px solid #537AD3;
+    margin: 2rem;
 }
 
 .dog-showcase img {
-    width: 300px;
-    margin: -40px 50px 0 50px;
+    width: 30vw;
 }
 
 section {
