--- a/main.css
+++ b/main.css
@@ -64,11 +64,14 @@ h1 {
 }
 
 section {
-    padding: 20px 40px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin: 2rem;
 }
 
 h2 {
-    font-size: 30px;
+    font-size: 10vw;
     font-family: 'Poppins', sans-serif;
     font-weight: 700;
 }
@@ -78,8 +81,6 @@ section h2 {
 }
 
 .pups-container {
-    width: 900px;
-    margin: 0 10px;
     display: flex;
     justify-content: space-around;
     align-items: flex-start;
@@ -87,11 +88,9 @@ section h2 {
 }
 
 .pup-wrapper {
-    width: 400px;
-    height: 200px;
+    width: 80%
     border-radius: 5px;
     box-shadow: 0px 1px 3px 0px rgba(0, 0, 0, 0.2);
-
     display: flex;
     overflow: hidden;
     margin-bottom: 20px;
