--- a/main.css
+++ b/main.css
@@ -71,7 +71,7 @@ section {
 }
 
 h2 {
-    font-size: 10vw;
+    font-size: 5vmax;
     font-family: 'Poppins', sans-serif;
     font-weight: 700;
 }
@@ -88,7 +88,7 @@ section h2 {
 }
 
 .pup-wrapper {
-    width: 80%
+    width: 80%;
     border-radius: 5px;
     box-shadow: 0px 1px 3px 0px rgba(0, 0, 0, 0.2);
     display: flex;
@@ -99,7 +99,6 @@ section h2 {
 .pup-pic {
     width: 200px;
     height: 200px;
-
     background-size: cover;
     background-position: center;
     background-size: cover;
@@ -158,7 +157,7 @@ footer {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 10px 20px;
+    padding: 1rem 2rem;
     color: #FFFFFF;
     font-family: 'Open Sans Condensed', sans-serif;
 }
