--- a/main.css
+++ b/main.css
@@ -88,17 +88,18 @@ section h2 {
 }
 
 .pup-wrapper {
-    width: 80%;
+    width: 50vw;
     border-radius: 5px;
     box-shadow: 0px 1px 3px 0px rgba(0, 0, 0, 0.2);
     display: flex;
+    flex-wrap: wrap;
     overflow: hidden;
-    margin-bottom: 20px;
+    margin: 1rem 2rem;
 }
 
 .pup-pic {
-    width: 200px;
-    height: 200px;
+    width: 100%;
+    height: 15rem;
     background-size: cover;
     background-position: center;
     background-size: cover;
@@ -155,7 +156,8 @@ section h2 {
 footer {
     background-color: #2B57A1;  /* dark blue */
     display: flex;
-    justify-content: space-between;
+    flex-direction: column;
+    justify-content: space-around;
     align-items: center;
     padding: 1rem 2rem;
     color: #FFFFFF;
