--- a/main.css
+++ b/main.css
@@ -9,8 +9,9 @@ Purple: 3E41A8;
 */
 
 body {
-    width: 98%;
-    margin: 1rem;
+    width: 100%;
+    margin: 0;
+    padding: 0;
 }
 
 nav {
@@ -23,7 +24,7 @@ nav {
 
 .logo {
     color: #FFFFFF;  /* white */
-    font-size: 3rem;
+    font-size: 5vw;
     font-family: 'Nunito', sans-serif;
 }
 
@@ -33,6 +34,7 @@ nav {
     font-family: 'Poppins', sans-serif;
     font-weight: bold;
     margin: 1rem;
+    display: none;
 }
 
 header {
@@ -95,6 +97,7 @@ section h2 {
     flex-wrap: wrap;
     overflow: hidden;
     margin: 1rem 2rem;
+    max-width: 18rem;
 }
 
 .pup-pic {
@@ -156,10 +159,54 @@ section h2 {
 footer {
     background-color: #2B57A1;  /* dark blue */
     display: flex;
-    flex-direction: column;
     justify-content: space-around;
     align-items: center;
     padding: 1rem 2rem;
     color: #FFFFFF;
     font-family: 'Open Sans Condensed', sans-serif;
+}
+
+footer.logo {
+    font-size: 3vw;
+}
+
+@media (max-width: 699px) {
+    footer {
+        flex-direction: column;
+    }
+}
+
+@media (min-width: 700px) and (max-width: 1100px) {
+    .nav-links a {
+        display: inline;
+    }
+
+    .pup-wrapper {
+        max-width: 18rem;
+    }
+
+    .footer {
+        flex-direction: row;
+        flex-wrap: nowrap;
+    }
+}
+
+@media (min-width: 1101px) {
+    .nav-links a {
+        display: inline;
+    }
+
+    .pup-wrapper {
+        flex-wrap: nowrap;
+        max-width: 26rem;
+    }
+
+    .pup-pic {
+        width: 60%;
+    }
+
+    .footer {
+        flex-direction: row;
+        flex-wrap: nowrap;
+    }
 }
