--- a/main.css
+++ b/main.css
@@ -19,7 +19,10 @@ nav {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 1rem 2rem;
+    padding: 1rem;
+    position: fixed;
+    width: 100%;
+    box-sizing: border-box;
 }
 
 .logo {
@@ -33,8 +36,7 @@ nav {
     text-decoration: none;
     font-family: 'Poppins', sans-serif;
     font-weight: bold;
-    margin: 1rem;
-    display: none;
+    padding: 0.5rem;
 }
 
 header {
@@ -43,12 +45,13 @@ header {
     display: flex;
     justify-content: space-around;
     align-items: center;
+    padding-top: 3.5rem;
 }
 
 h1 {
     font-size: 6vw;
     font-family: 'Poppins', sans-serif;
-    line-height: 3rem;
+    line-height: 6vw;
     margin: 3vw;
 }
 
@@ -159,6 +162,7 @@ section h2 {
 footer {
     background-color: #2B57A1;  /* dark blue */
     display: flex;
+    flex-direction: column;
     justify-content: space-around;
     align-items: center;
     padding: 1rem 2rem;
@@ -166,14 +170,8 @@ footer {
     font-family: 'Open Sans Condensed', sans-serif;
 }
 
-footer.logo {
+footer .logo {
     font-size: 3vw;
-}
-
-@media (max-width: 699px) {
-    footer {
-        flex-direction: column;
-    }
 }
 
 @media (min-width: 700px) and (max-width: 1100px) {
@@ -181,19 +179,26 @@ footer.logo {
         display: inline;
     }
 
+    header {
+        padding-top: 5rem;
+    }
+
     .pup-wrapper {
         max-width: 18rem;
     }
 
-    .footer {
+    footer {
         flex-direction: row;
-        flex-wrap: nowrap;
     }
 }
 
 @media (min-width: 1101px) {
     .nav-links a {
         display: inline;
+    }
+
+    header {
+        padding-top: 7rem;
     }
 
     .pup-wrapper {
@@ -205,8 +210,7 @@ footer.logo {
         width: 60%;
     }
 
-    .footer {
+    footer {
         flex-direction: row;
-        flex-wrap: nowrap;
     }
 }
